--- a/src/app/scss/components/_buttons.scss
+++ b/src/app/scss/components/_buttons.scss
@@ -2,13 +2,11 @@
 
 .base-button {
   background: var(--secondary);
-  min-width: 135px;
-  height: 46px;
   outline: 0;
   text-transform: capitalize;
   color: rgba(var(--primary), 0.8);
-  font-family: Montserrat-SemiBold;
-  @include p(3, 3);
+  font-family: Montserrat-SemiBold, sans-serif;
+  @include p(4, 5);
   border-radius: 15px;
   text-decoration: none;
   font-size: 18px;
@@ -17,6 +15,7 @@
   transition: background 0.2s ease-out, color 0.2s ease-out;
   display: inline-flex;
   align-items: center;
+  justify-content: center;
 
   &:hover {
     background: transparent;
