--- a/src/app/scss/layout/_services.scss
+++ b/src/app/scss/layout/_services.scss
@@ -8,7 +8,7 @@
   .services-wrapper {
     display: flex;
     flex-direction: column;
-    max-width: 1150px;
+    //max-width: 1150px;
     @include m(0, auto);
 
     .service {
