--- a/src/app/index.html
+++ b/src/app/index.html
@@ -9,6 +9,23 @@
     />
     <title>Scorpio Bike Repair Shop</title>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-F154QCTQ80"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+
+      gtag('js', new Date());
+
+      gtag('config', 'G-F154QCTQ80');
+    </script>
+
     <link
       rel="apple-touch-icon"
       sizes="180x180"
