add loader to our clients section

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -697,6 +697,13 @@
       <section class="our-clients">
         <h1 class="our-clients-title underline">Our clients</h1>
 
+        <div class="reviews-loader">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+
         <section class="swiper">
           <section class="reviews-wrapper swiper-wrapper"></section>
         </section>
