add bike animation

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -385,13 +385,37 @@
         />
       </svg>
 
-      <img
-        class="bike-img"
-        src="./images/yellow-bike.png"
-        alt="An image of a yellow bike"
-        width="733"
-        height="469"
-      />
+      <section class="bike-wrapper bike-img">
+        <img
+          src="images/back-tire.png"
+          alt="Bike back wheel"
+          class="back-wheel"
+          width="329"
+          height="330"
+        />
+        <img
+          src="images/bike-frame.png"
+          alt="The bike frame (no wheels)"
+          class="bike-frame"
+          width="530"
+          height="424"
+        />
+        <img
+          src="images/front-tire.png"
+          alt="Bike front wheel"
+          class="front-wheel"
+          width="329"
+          height="328"
+        />
+      </section>
+
+      <!--  <img-->
+      <!--    class='bike-img'-->
+      <!--    src='./images/yellow-bike.png'-->
+      <!--    alt='An image of a yellow bike'-->
+      <!--    width='733'-->
+      <!--    height='469'-->
+      <!--  />-->
       <section class="header-info">
         <img
           width="131"
