--- a/src/app/index.html
+++ b/src/app/index.html
@@ -9,21 +9,92 @@
     />
     <title>Scorpio Bike Repair Shop</title>
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- Add cookie consent css & js -->
+    <link rel="stylesheet" type="text/css" href="css/cookieconsent.min.css" />
+    <script src="scripts/cookieconsent.min.js" data-cfasync="false"></script>
+
+    <!-- Add google analytics -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-F154QCTQ80"
     ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
 
-      function gtag() {
-        dataLayer.push(arguments);
+    <script>
+      // Reads the value of a cookie by name or returns empty string
+      function getCookie(name) {
+        var b = document.cookie.match(
+          '(^|[^;]+)\\s*' + name + '\\s*=\\s*([^;]+)'
+        );
+        return b ? b.pop() : '';
       }
 
-      gtag('js', new Date());
+      function deleteCookie(name, path, domain) {
+        if (getCookie(name)) {
+          document.cookie =
+            name +
+            '=' +
+            (path ? ';path=' + path : '') +
+            (domain ? ';domain=' + domain : '') +
+            ';expires=Thu, 01 Jan 1970 00:00:01 GMT';
+        }
+      }
 
-      gtag('config', 'G-F154QCTQ80');
+      // Actually starting analytics up
+      function addAnalytics() {
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+          dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+        gtag('config', 'G-F154QCTQ80');
+      }
+
+      function disableAnalytics() {
+        window['ga-disable-G-F154QCTQ80'] = true;
+
+        deleteCookie('_ga', '/', 'localhost');
+        deleteCookie(`_ga_F154QCTQ80`, '/', 'localhost');
+      }
+
+      // Waiting for the load event
+      window.addEventListener('load', function () {
+        // Reading "cookieconsent_status" cookie
+        const cookieConsent = getCookie('cookieconsent_status');
+
+        // Start analytics if user consented or did not deny
+        if (cookieConsent === 'allow') {
+          addAnalytics();
+        } else if (cookieConsent === 'deny') {
+          disableAnalytics();
+        }
+
+        // Initialise cookie consent banner
+        window.cookieconsent.initialise({
+          palette: {
+            popup: {
+              background: '#000',
+              text: '#fff',
+            },
+            button: {
+              background: '#fd0',
+              text: '#000',
+            },
+          },
+          type: 'opt-out',
+          content: {
+            allow: 'Approve',
+            dismiss: 'Approve',
+            deny: 'Reject',
+            href: '/policy.html',
+          },
+          // Reload the page on user choice to make sure cookie is set
+          onStatusChange: function (status, chosenBefore) {
+            location.reload();
+          },
+        });
+      });
     </script>
 
     <link
@@ -899,7 +970,10 @@
         </article>
 
         <!-- Make it copyright scorpibike and made by peekembrace -->
-        <p class="copyright-text">Copyright PeekEmbrace 2021</p>
+        <p class="copyright-text">
+          Copyright &copy; Scorpio Bike <span id="copyright-year">2021</span>
+        </p>
+        <p class="madeby-text">Made by PeekEmbrace</p>
       </section>
     </footer>
 
