--- a/src/app/scss/layout/_services.scss
+++ b/src/app/scss/layout/_services.scss
@@ -95,7 +95,8 @@
             & > a {
               display: block;
               @include mt(3);
-              color: #fff;
+              font-style: italic;
+              color: #000;
               text-decoration: underline;
             }
 
