--- a/src/app/index.html
+++ b/src/app/index.html
@@ -971,7 +971,7 @@
 
         <!-- Make it copyright scorpibike and made by peekembrace -->
         <p class="copyright-text">
-          Copyright &copy; Scorpio Bike <span id="copyright-year">2021</span>
+          Copyright &copy; Scorpio Bike 2021<span id="copyright-year"></span>
         </p>
         <p class="madeby-text">Made by PeekEmbrace</p>
       </section>
