fix header links

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -452,7 +452,8 @@
         <section class="action-buttons">
           <a
             class="base-button white-button"
-            href="https://www.facebook.com/ScorpioBike0"
+            href="https://www.facebook.com/ScorpioBike01"
+            target="_blank"
             rel="noopener"
           >
             <svg
@@ -474,6 +475,7 @@
           <a
             class="base-button black-button"
             href="https://g.page/ScorpioBike01?share"
+            target="_blank"
             rel="noopener"
           >
             <svg
