--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -174,6 +174,7 @@ header.main-header {
   }
 
   .sub {
+    font-size: 18px;
     font-family: Montserrat-SemiBold, sans-serif;
     text-align: center;
     @include mb(3);
