--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -66,6 +66,18 @@ hr {
   font-size: 16px;
 }
 
+.cookie-isopen {
+  .madeby-text {
+    @include mb(14);
+    @include breakpoint(s) {
+      @include mb(10);
+    }
+    @include breakpoint(m) {
+      @include mb(9);
+    }
+  }
+}
+
 .logo-section,
 .working-hours,
 .social-icons {
