--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -69,6 +69,9 @@ hr {
 .cookie-isopen {
   .madeby-text {
     @include mb(14);
+    @include breakpoint(xs) {
+      @include mb(12);
+    }
     @include breakpoint(s) {
       @include mb(10);
     }
