--- a/scss/components/_language-changer.scss
+++ b/scss/components/_language-changer.scss
@@ -12,6 +12,7 @@
     align-items: center;
     justify-content: space-between;
     border-radius: 20px;
+    cursor: pointer;
 
     p {
       color: var(--primary);
