add new font for danish and translate our services

--- a/scss/base/_fonts.scss
+++ b/scss/base/_fonts.scss
@@ -18,3 +18,10 @@
   src: url('../fonts/Montserrat-Regular.ttf');
   font-display: swap;
 }
+
+// Danish Header
+@font-face {
+  font-family: 'Fairview-Regular';
+  src: url('../fonts/Fairview_Regular.otf');
+  font-display: swap;
+}
