--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -116,6 +116,14 @@ header.main-header {
     font-size: 48px;
     text-align: center;
     @include mb(3);
+
+    &.danish {
+      font-family: Fairview-Regular;
+      text-transform: uppercase;
+      letter-spacing: 4px;
+      font-size: 59px;
+      font-weight: bolder;
+    }
   }
 
   .working-hours {
